se activa el boton actualizar
se activa el boton actualizar

--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -48,5 +48,5 @@
         android:orderInCategory="100"
         android:title="Actualizar Codigo"
         app:showAsAction="never"
-        android:visible="false" />
+        android:visible="true" />
 </menu>
